testsuite/bsc.verilog/noinline/NoInline_ArgNotInBits.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling NoInline_ArgNotInBits.bsv
Error: Unknown position: (T0031)
  The provisos for this expression could not be resolved because there are no
  instances of the form:
    Bits#(NoInline_ArgNotInBits::L, a__)
  The proviso was implied by expressions at the following positions:
    "NoInline_ArgNotInBits.bsv", line 4, column 15
Error: "NoInline_ArgNotInBits.bsv", line 4, column 15: (T0032)
  This expression requires the following proviso which could not be resolved:
    WrapField#(function Bool f(NoInline_ArgNotInBits::L x1), a__)
  An instance for this proviso exists, but it depends on the following
  provisos for which there are no instances:
    Curry#(function Bit#(1) f(Bit#(b__) x1), a__),
    Bits#(NoInline_ArgNotInBits::L, b__)
